to.etc.domui/src/resources/themes/blue/style.css
@IMPORT url("calendar-blue2.css");

/*
 * Base stylesheet to style the provided controls.
 */
#inputjes {
	border: 1px solid #781351;
}

.ui-txx {
	vertical-align: top;
}

.vp-f-lbl-u {
	font-weight: bold;
	font-size: 11px;
	vertical-align: top;
}

.vp-wosel .ui-sp-a { /*	background-color: #dddddd; */
	background: url(../../img/bg-vert-selector2.png) repeat-y #dcf7f2 center
		;
	height: 100%;
	vertical-align: top;
}

.vp-s-tbl TD {
	border-left: 1px solid grey;
	padding: 0px 3px;
}

.vp-s-tbl TH {
	text-align: left;
	border-left: 1px solid grey;
	padding: 0px 3px;
}

/*** ViewPoint Selecteer speciale tekens boxen ***/
.vp-oddchars {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	padding: 10px;
}

.vp-oddchars-tbl2 {
	margin-top: 15px;
}

.vp-oddchars-c {
	border: 1px solid black;
	width: 2em;
	height: 2em;
	text-align: center;
}

.vp-oddchars-c:hover {
	background-color: #ffe1bf;
}

.vp-oddchars-dt {
	border: 1px solid black;
	text-align: center;
}

.vp-oddchars-dt:hover {
	background-color: #ffe1bf;
}

/*** ViewPoint title bar ***/
.vp-ttl-bb {
	white-space: nowrap;
	background-image: url(bg-caption-end.png);
	background-repeat: no-repeat;
	width: 90%;
	text-align: right;
}

.vp-ttl-i {
	background-color: #bed6f8;
	padding-right: 25px;
	padding-left: 15px;
}

.vp-ttl-t {
	background-color: #bed6f8;
	width: 10%;
	white-space: nowrap;
	color: #123667;
	font-weight: bold;
}

/*** AccessDeniedPage ***/
.ui-acd-ttl {
	font-size: larger;
	font-style: italic;
}

/*** LinkButton component. ***/
.ui-lbtn {
	background-repeat: no-repeat;
	background-position: left;
	padding-left: 18px;
}
a:hover.ui-lbtn {
	text-decoration: underline !important;
}

/*** Drag and drop ***/
.ui-drgbl {
	cursor: move;
}
.ui-drp-hover {
	border: 2px solid yellow;
	background-color: green;
}
.ui-drp-ins {
	font-size: x-small;
	font-variant: small-caps;
	background: url(separator.png) repeat-x center;
	text-align: center;
}

/*** Explanation box ***/
.ui-expl {
	border: 2px solid #777777;
	padding: 5px;
	-moz-border-radius: 10px;
	background: url(bg-expl.png) repeat-x;
	color: black;
}

/*** List Shuttle ***/
.ui-sh {
	width: 100%;
}
table .ui-sh {
	width: 100%;
}
.ui-sh-sc {
	width: 40%;
}
.ui-sh-tc {
	width: 40%;
}
.ui-sh-tcd, .ui-sh-scd {
	border: 1px solid #aaaaaa;
}
.ui-sh-bc {
	width: 1%;
}
.ui-sh-sc .selected, .ui-sh-tc .selected {
	background-color: cyan;
}

/*** BreadCrumb ***/
.ui-brc {
	padding: 0; margin: 0;
}
.ui-brc-left {
	padding: 0; margin: 0;
	background-image: url(bg-rounded-left.png);
	width: 19px;
	height: 36px;
}
.ui-brc-right {
	padding: 0; margin: 0;
	background-image: url(bg-rounded-right.png);
	width: 29px;
	height: 36px;
}
.ui-brc-middle {
	padding: 0; margin: 0;
	background: url(bg-rounded-middle.png) repeat-x;
	height: 36px;
}
A.ui-brc-l, A.ui-brc-l:hover A.ui-brc-l :VISITED, A.ui-brc-l:ACTIVE {
	color: #ffff99;
	font-weight: bolder;
	text-decoration: none;
}
.ui-brc-c {
	color: white;
	font-weight: bolder;
}

/*** ButtonBar component ***/
.ui-buttonbar {
	padding: 0; margin: 0;
}
.ui-bb-left {
	padding: 0; margin: 0;
	background-image: url(bg-rounded-left.png);
	width: 19px;
	height: 36px;
}
.ui-bb-right {
	padding: 0; margin: 0;
	background-image: url(bg-rounded-right.png);
	width: 29px;
	height: 36px;
}
.ui-bb-middle {
	padding: 0; margin: 0;
	background: url(bg-rounded-middle.png) repeat-x;
	height: 36px;
}

/*** Tree component ***/
.ui-tr-act {
	cursor: pointer;
}
TD.ui-tr-sel:hover {
	background-color: #ffe1bf !important;
}

/*** AsyncContainer ***/
.ui-asc {
	text-align: center;
}

/*** MonthPanel ***/
.ui-mp {
/*	background-color: #eeeeee; */
	font-size: 10pt;
}
.ui-mp-mn {
	background-color: #82b4f8;
	text-align: center;
	font-weight: bold;
	font-variant: small-caps;
}

.ui-mp-top {
	background: url(bg-caption.png) repeat-x;
	font-weight: bold;
	font-style: italic;
}

.ui-mp-w {
	background-color: #bed6f8;
	font-weight: bold;
	font-style: italic;
}
.ui-mp-top TD {
	width: 1.8em;
}
.ui-mp-d, .ui-mp-xd {
	text-align: right;
}
.ui-mp-xd {
	color: #777777;
}
TD.ui-mp-ch:hover {
	background-color: #ffe1bf !important;
}
.ui-mp-mrk {
	background-color: yellow;
}
/**** Schedule ****/
.ui-wa {
	
}

.ui-wa-hd {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
	font-weight: bold;
	vertical-align: top;
	text-align: center;
	background-color: #eeeeee;
	height: 20px;
}

div.ui-wa-bg {
	position: relative;
	top: 0px;
	left: 0px;
	clear: both;
	z-index: 10;
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
}
div.ui-wa-f {
	z-index: 20;
	background-color: transparent;
}

/* IMPORTANT: this color together with "cellspacing=1" creates the lines between the cells!!!! */
table.ui-wa-bgtbl {
	background-color: #cccccc;
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
}

.ui-wa-gt {
	background-color: #eeeeee;
	text-align: right;
	white-space: nowrap;
}

.ui-wa-hour {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 12pt;
	font-weight: bold;
	vertical-align: top;
}

.ui-wa-min {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
	font-weight: bold;
	vertical-align: top;
}

.ui-wa-cell {
	background-color: #ffffff;
}

/**** schedule item ****/
.ui-wa-it {
	overflow: hidden;
	border: 1px solid black;
	background-color: #00ffcc;
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
}

.ui-wa-img {
	float: left;
	padding-right: 10px;
}

.ui-wa-ity {
	font-variant: small-caps;
	font-size: 8pt;
}

.ui-wa-nm {
	font-weight: bolder;
}

.ui-wa-dt {
	font-size: 8pt;
}

.ui-wa-tm {
	font-size: 6pt;
	color: blue;
	margin-left: 5px;
}

.ui-wa-nt {
	background-color: #ff4d00;
}

/*** LookupInput thingerydoo ***/
.ui-lui {
	background: #ffffff;
	padding: 0px;
	margin: 0px;
}

table.ui-lui {
	width: 5%;
	white-space: nowrap;
}

.ui-lui-v {
	padding: 0px;
	margin: 0px;
	background-color: #ffffff;
}

/*** FloatingWindow ***/
.ui-fw {
	padding: 0;
	margin: 0;
	/*	border: 1px solid black; */
	background: url(bg-body.png) repeat-x white;
	border: 1px solid #cccccc;
	border-top: none;
	/*	overflow: hidden;	*/
}

.ui-fw-ttl {
	position: absolute;
	top: 0px;
	height: 20px;
	left: 0px;
	right: 0px;
/*	width: 100%; */
	padding: 0;
	padding: 2px;
	background: url(bg-float-ttl2.png) repeat-x;
	border-bottom: 1px solid #eeeeee;
	font-size: 15px;
	font-weight: bold;
}

.ui-fw-c {
	width: 100%;
	position: absolute;
	top: 24px;
	bottom: 0px;
/*	height: 100%; */
	padding: 0;
	margin: 0;
	overflow: auto;
}

.ui-tree {
	height: 100%;
}

/*** SplitPanel (simple version) layout thingy ***/
.ui-sp,.ui-sp-c {
	vertical-align: top;
}

/*** Form basic styles: these are for forms having the label BEFORE the field (horizontal). ***/
.ui-f-lbl {
	text-align: right;
	font-weight: bold;
	font-size: 11px;
	/* FIXME: Fuck-me-gently with a chainsaw: viewpoint uses PIXEL sizing!? */
	vertical-align: top;
}

.ui-f-in {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
}
/* Display-only field */
.ui-f-display {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
	background: #eff7ff;
}

/*** Form basic styles: for forms where the label is above the edit control (vertical). ***/
.ui-fv-lbl {
	text-align: left;
	font-weight: bold;
	font-size: 11px;
	/* FIXME: Fuck-me-gently with a chainsaw: viewpoint uses PIXEL sizing!? */
	vertical-align: top;
}
.ui-fv-in {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
}
.ui-fv-display {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
	background: #eff7ff;
}

input {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
}

.ui-ro {
	background: #eff7ff;
}





/*** NiceButton ***/
a.ui-nbtn {
	/* display: inline-table; jal 20080711 This works proper with FF3 et al but of course not with IE7.. IE8 does work though */
	display: inline-block;
	color: white;
	background: url(threebuttons2.png) transparent no-repeat;
	width: 122px;
	height: 25px;
	margin: 3px auto;
	padding: 3px 0 0 0;
	text-align: center;
	font-family: Helvetica, Calibri, Arial, Bitstream Vera Sans, sans-serif;
	font-size: 100%;
	font-weight: bold;
	text-decoration: none;
}

a.ui-nbtn:hover,a.ui-nbtn:active {
	background-position: 0 -34px;
	color: yellow;
}

/*** Image Button ***/
.ui-ib {
	width: 114px;
	height: 22px;
	border: none;
	background: none;
}

.ui-ib:hover {
	background: #cccccc;
}

/*** Old Image button ***/
.ui-ibtn {
	cursor: pointer;
}

/*** MsgBox ***/
.ui-mb {
	background-color: #d4eeff;
	border: 1px solid #777777;
}

.ui-mb-ttl {
	background-color: #9cd9ff;
}

/*** DataTable default style ***/
.ui-dt {
	overflow: auto;
}

.ui-dt TH {
	text-align: left;
}

.ui-dt-nores {
	padding: 10px 0px 10px 0px;
	font-style: italic;
}

.ui-odd {
	
}

.ui-even {
	background-color: #eeeeee;
}

TR.ui-rowsel:hover {
	background-color: #ffe1bf !important;
}

TD.ui-cellsel:hover {
	background-color: e1ffbf !important;
}

TH.ui-sortable {
	cursor: pointer;
}

.ui-dt * TH {
	font-size: 11px;
	font-weight: bold;
}

.ui-dt {
	font-size: 11px;
}

/*** Small Image button ***/
.ui-sib {
	padding: 0px 1px 0px 1px;
	margin: 0px;
	border: 0px;
	background: transparent;
}

.ui-sib * img {
	margin: 0px;
	border: 0px;
}

.ui-sib:hover {
	background-color: #bed6f8 !important;
}

/*** CaptionedPanel ***/
.ui-pnl-outer {
	background-color: white;
	padding: 1px;
	border: 1px solid #bed6f8;
}

.ui-pnl-caption {
	border: 1px solid #bed6f8;
	padding: 2px 4px 2px 4px;
	font-weight: bold;
	background: url(bg-caption.png) repeat-x;
}

.ui-pnl-cont {
	position: relative;
	padding: 5px;
}

/*** ErrorPanel - a CaptionedPanel used to display errors in the page ***/
.ui-err-outer { /*	background-color: #ffe5e5; */
	background-color: white;
	padding: 1px;
	border: 1px solid #f7c2c2;
	margin-bottom: 5px;
}

.ui-err-caption {
	border: 1px solid #f7c2c2;
	padding: 2px 4px 2px 4px;
	font-weight: bold;
	background: url(bg-errors.png) repeat-x bottom;
}

.ui-input-err {
	background-color: #ffe5e5;
}

/*** The tab control, using the "sliding doors" technique as in http://www.alistapart.com/articles/slidingdoors/ ***/
.ui-tab-hdr {
	float: left;
	width: 100%;
	/* background: #f2f7ff url(tab-blue-header2-bg.png) repeat-x bottom;  jal 20080710 blauwe bar achter tabbuttons weg */
	font-size: 93%;
	line-height: normal;
	border-bottom: 1px solid black;
}

.ui-tab-hdr ul {
	margin: 0;
	padding: 8px 10px 0;
	list-style: none;
}

.ui-tab-hdr  li {
	float: left;
	margin: 0;
	padding: 0 0 0 9px;
	background: url(tab-off-left.png) no-repeat left top;
}

.ui-tab-hdr a {
	display: block;
	background: url(tab-off-right.png) no-repeat right top;
	padding: 5px 15px 4px 6px;
	text-decoration: none;
	font-weight: bold;
	color: #123667;
}

.ui-tab-hdr ul a:hover {
	color: aqua;
}

.ui-tab-hdr .ui-tab-sel {
	background-image: url(tab-norm-left-sel.png);
}

.ui-tab-hdr .ui-tab-sel a {
	background-image: url(tab-norm-right-sel.png);
	padding-bottom: 5px;
	color: #123667;
}

.ui-tab-icon {
	padding-right: 5px;
}

.ui-tab {
	position: relative; /* jal new 20070625 */
	clear: both;
	background-color: #ffffff;
	border: 1px solid #bed6f8;
	padding: 4px;
}

.ui-tab-tabbar {
	margin: 0px;
	padding: 0px;
}

.ui-tab-pag {
	border-top: 1px solid black;
}

/*** Body element ***/
body,html {
	background: url(bg-body.png) repeat-x;
	background-color: #fdfefe;
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 12pt;
	height: 90%;
}

/*** Helper classes ***/
.ui-szless {
	padding: 0px;
	margin: 0px;
}

